--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="services">
         <h2>What We Do?</h2>
         <p>At Hykrox, we offer a wide range of design services aimed at enhancing your online presence. Whether it's a complete website overhaul or a new mobile app, we’re dedicated to providing solutions that align with your business goals.</p>
-        <img src="images/Image (2).png" alt="Designers image">
+        <img src="images/image (2).png" alt="Designers image">
         <p>We craft tailored digital solutions, working closely with clients to bring their vision to life with creative, user-focused designs for websites and apps.</p>
         <div class="service-list">
             <div class="service">
